# gpt4v-slide-check

./: .gitignore  README.md  config.yml  multi_slides.py  pyproject.toml  single_slide.py
utils/: load_yaml.py
